--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=expenses
 
 # 1. Database Connection Setup
-spring.datasource.url=jdbc:mysql://localhost:3306/expense_tracker_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-# Password ???? ??????? ??? ????? ??????
-spring.datasource.password=
+spring.datasource.url=postgres://avnadmin:AVNS_O5OD-_OAY4eRCbs_j15@pg-2f5c846e-kreativelabs001.l.aivencloud.com:21107/defaultdb?sslmode=require
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_O5OD-_OAY4eRCbs_j15
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 2. JPA / Hibernate Settings
@@ -13,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # ??????: ??? Dialect line ?? ????? ???. Spring Boot ??? ??????? auto detect ?????.
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect  <-- ??? ?? ??
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
