--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-spring.application.name=expenses
-
-# 1. Database Connection Setup
-spring.datasource.url=postgres://avnadmin:AVNS_O5OD-_OAY4eRCbs_j15@pg-2f5c846e-kreativelabs001.l.aivencloud.com:21107/defaultdb?sslmode=require
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_O5OD-_OAY4eRCbs_j15
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# 2. JPA / Hibernate Settings
+# Data Save ?????? exe ?? ????? ??? 'data' ???? ????????
+spring.datasource.url=jdbc:h2:file:./data/expense_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# ??????: ??? Dialect line ?? ????? ???. Spring Boot ??? ??????? auto detect ?????.
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# ??? ?? Run ???? ???? Browser ?? Open ?????
+server.port=8081
